# OpenCLInfo

./: CMakeLists.txt  LICENSE.txt  README.md  clDiag.cpp  clInfo.cpp  clInfo.h
cli/: CMakeLists.txt
cli/src/: clInfo.cpp
lib/: CMakeLists.txt  clInfo.cpp  clInfo.h
ui/: CMakeLists.txt
ui/inc/: InfoUI.h
ui/src/: InfoUI.cpp  InfoUI.ui  OpenCLInfoViewerMain.cpp
