PROJECT(NIVEN_APP_OPENCL_INFO)

SET(SOURCES
	src/clInfo.cpp)

SET(HEADERS
)

ADD_EXECUTABLE(OpenCLInfo ${SOURCES} ${HEADERS})
TARGET_LINK_LIBRARIES(OpenCLInfo clInfo)

SET_PROPERTY(TARGET OpenCLInfo PROPERTY CXX_STANDARD 11)
SET_PROPERTY(TARGET OpenCLInfo PROPERTY CXX_STANDARD_REQUIRED ON)

