CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(NIV_LIB_CLINFO)

SET(SOURCES
	clInfo.cpp)

SET(HEADERS
	clInfo.h)

FIND_PACKAGE(OpenCL REQUIRED)

ADD_LIBRARY(clInfo STATIC ${SOURCES} ${HEADERS})
TARGET_INCLUDE_DIRECTORIES (clInfo PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${OpenCL_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(clInfo ${OpenCL_LIBRARIES})
