PROJECT(NIVEN_OPENCL_INFO_VIEWER)

SET(SOURCES
	src/OpenCLInfoViewerMain.cpp

	src/InfoUI.cpp)

SET(HEADERS
	inc/InfoUI.h)

SET(MOC_HEADERS
	inc/InfoUI.h)

SET(UI_FILES
	src/InfoUI.ui)

FIND_PACKAGE(Qt5Core)
FIND_PACKAGE(Qt5Widgets)

QT5_WRAP_CPP(OUT_MOC_FILES ${MOC_HEADERS})
QT5_WRAP_UI(OUT_UI_FILES ${UI_FILES})

ADD_EXECUTABLE(OpenCLInfoViewer ${SOURCES} ${HEADERS} ${OUT_MOC_FILES} ${OUT_UI_FILES})
TARGET_LINK_LIBRARIES(OpenCLInfoViewer clInfo Qt5::Core Qt5::Gui Qt5::Widgets)
TARGET_INCLUDE_DIRECTORIES(OpenCLInfoViewer PRIVATE ${CMAKE_CURRENT_BINARY_DIR} inc)
